fixed box size and spacing

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family:'Arial','Helvetica Neue',Helvetica,sans-serif;
+    font-family:'Arial','Helvetica Neue','Helvetica','sans-serif';
     color:#777;
     background:#777;
     width:960px;
@@ -9,33 +9,80 @@ body {
 header {
     background: #ebebeb;
     color:#777;
-    text-align: center;}
+    text-align: center;
+    height:50px;
+    margin:20px;
+    border: 10px;
+    padding:20px}
 
 nav {
     background:#ebebeb;
-    text-align: center;}
+    text-align: center;
+    height:40px;
+    margin:20px;
+    padding:20px}
+
+.clearfix::after {
+    content: " ";
+    display: block;
+    clear: both
+    }
 
 aside {
     background:#ebebeb;
-    text-align: center;}
-
-footer {
-    background:#ebebeb;
-    text-align: center;}
+    text-align: center;
+    width:400px;
+    height:245px;
+    float: right;
+    border:20px;
+    margin-left:20px;
+    margin-right:20px;
+    }
 
 article {
     color:#ebebeb;
     background:#777;
-    text-align: center;}
+    text-align: center;
+    float:left;
+    width:460px;
+    height:190px;
+    margin-left:15px;
+    margin-right: 10px;
+    margin-top:20px
+}
 
 h1 {
     color:#777;
-    background:#ebebeb}
+    background:#ebebeb;
+    width:420px;
+    height:30px;
+    margin-left: 15px;
+    height:50px;
+    margin-top:20px}
 
 p {
     color:#777;
     background:#ebebeb;
-    text-align: center;}
+    text-align: center;
+    width:420px;
+    height:30px;
+    margin-left:15px;
+    margin-top:20px;
+    height:50px}
 
 section {
-    width:495px;}
+    width:495px;
+    height:245px;
+    text-align: center;
+    background: #ebebeb;
+    color:#777;
+    padding:0px;
+    margin-left:20px;
+    }
+
+footer {
+    background:#ebebeb;
+    text-align: center;
+    height:50px;
+    margin:20px;
+    padding:20px}
